--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>midiidev's site demos</title>
-    <meta http-equiv="Refresh" content="0; url='https://midiidev.xyz/demos'" />
+    <meta http-equiv="Refresh" content="0; url='https://midiidev.xyz/projects/demos'" />
 </head>
 <body>
     <p>Redirecting...</p>
