fix assignment to comparison

--- a/demos/solid-black-style/index.html
+++ b/demos/solid-black-style/index.html
@@ -130,7 +130,7 @@
         </p>
     </article>
 
-    <div x-show="page = 2">
+    <div x-show="page === 2">
         <h1 class="text-4xl font-extrabold mb-5">Log In</h1>
 
         <form class="border p-5">
